add welcome page and second page

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">YeraPizza</string>
+    <string name="let_s_find_the_n_best_amp_healthy_pizza"><![CDATA[Let\'s Find the \n Best&Healthy pizza]]></string>
 </resources>
